force-app/main/default/objects/SOQ_OppReg_Product_Map__c/SOQ_OppReg_Product_Map__c.object-meta.xml
<CustomObject>
    <description>SOQ-15 - Mapping table to derive Product from Opp Reg Primary, Secondary Product Picklist values</description>
    <label>SOQ OppReg Product Map</label>
    <nameField>
        <displayFormat>ProductMap-{0000}</displayFormat>
        <label>ProductMap</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOQ OppReg Product Maps</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>