force-app/main/default/objects/SOQ_OppReg_Product_Map__c/fields/IsCPQ__c.field-meta.xml
<CustomField>
    <fullName>IsCPQ__c</fullName>
    <description>Active and IsCPQ both are true</description>
    <formula>IF( Product__r.IsActive &amp;&amp; Product__r.IsCPQ__c, true, false)</formula>
    <label>IsCPQ</label>
    <type>Checkbox</type>
</CustomField>