force-app/main/default/objects/SOQ_OppReg_Product_Map__c/fields/Mandatory_Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added as a mandatory option for the Parent Product
Ex: DGX A100 Mandatory Installation - Partner for Opp Reg Product</description>
    <inlineHelpText>Added as a mandatory option for the Parent Product
Ex: DGX A100 Mandatory Installation - Partner for Opp Reg Product</inlineHelpText>
    <label>Mandatory Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SOQ OppReg Product Maps (Mandatory Parent Product)</relationshipLabel>
    <relationshipName>Mandatory_Parent_Product</relationshipName>
    <type>Lookup</type>
</CustomField>