force-app/main/default/objects/SOQ_OppReg_Product_Map__c/fields/OppReg_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>OppReg_Product_Name__c</fullName>
    <description>Product Name used in Opp Reg form</description>
    <inlineHelpText>Product Name used in Opp Reg form</inlineHelpText>
    <label>OppReg Product Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>