force-app/main/default/objects/SOQ_OppReg_Product_Map__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Base Product</description>
    <inlineHelpText>Base Product, Product Name used in Opp Reg form is matched with this field to add Quote Line items for Opp Reg auto quote creation.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>SOQ_OppReg_Product_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>