force-app/main/default/objects/SOQ_OppReg_Product_Map__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Term in Years</description>
    <inlineHelpText>Term in Years</inlineHelpText>
    <label>Term</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>