force-app/main/default/objects/SOQ_OppReg_Product_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OppReg_Product_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Term__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Mandatory_Parent_Product__c</columns>
    <columns>IsCPQ__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>